log
Fri Mar 20 10:14:55 PM UTC 2026: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:59:17: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   59 |       sumatoria += elemento;
      |                 ^~
exercises.c:60:17: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   60 |       *elemento = next(L);
      |                 ^
44d58c2
Fri Mar 20 10:15:14 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:60:17: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   60 |       *elemento = next(L);
      |                 ^
9783d77
Fri Mar 20 10:16:01 PM UTC 2026: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:4: error: invalid type argument of unary ‘*’ (have ‘int’)
   57 |    *elemento = first(L);
      |    ^~~~~~~~~
exercises.c:59:19: error: comparison between pointer and integer [-Werror]
   59 |    while(elemento != NULL) {
      |                   ^~
exercises.c:60:20: error: invalid type argument of unary ‘*’ (have ‘int’)
   60 |       sumatoria += *elemento;
      |                    ^~~~~~~~~
exercises.c:61:16: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   61 |       elemento = next(L);
      |                ^
cc1: all warnings being treated as errors
1604b67
Fri Mar 20 10:17:14 PM UTC 2026: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:11: error: ‘elemento’ undeclared (first use in this function)
   56 |    (int*) elemento = first(L);
      |           ^~~~~~~~
exercises.c:56:11: note: each undeclared identifier is reported only once for each function it appears in
2d6b37d
Fri Mar 20 10:17:35 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
be80952
Fri Mar 20 10:28:19 PM UTC 2026: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:4: error: ‘elemento’ undeclared (first use in this function)
   46 |    elemento = int* malloc(1 * sizeof(int));
      |    ^~~~~~~~
exercises.c:46:4: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:46:15: error: expected expression before ‘int’
   46 |    elemento = int* malloc(1 * sizeof(int));
      |               ^~~
cc91d63
Fri Mar 20 10:34:19 PM UTC 2026: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
221c0ed
